# immigration-discourse-dataset

./: .gitignore  CHANGELOG.md  README.md  immigration_corpus.py  pyproject.toml  requirements.txt  setup_aws.sh
docs/: team_guide.md
examples/: 01_basic_loading.py  aws_config.py  jupyter_template.ipynb
