[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "immigration-discourse-dataset"
version = "0.1.0"
description = "Immigration discourse dataset - access library for news articles"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Kevin Barcenas-Martinez"},
    {name = "Nitin Sudarsanam"}
]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "boto3>=1.28.0",
    "s3fs>=2024.10.0",
    "fsspec>=2024.10.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[project.urls]
Homepage = "https://github.com/kevinbarcenasmtz/immigration-discourse-dataset"
Repository = "https://github.com/kevinbarcenasmtz/immigration-discourse-dataset"

[tool.setuptools]
packages = ["immigration_corpus"]

[tool.setuptools.package-dir]
immigration_corpus = "."